# Credible

./: .gitignore  Anchor.toml  Architechture of the Project.txt  Cargo.toml  Hackathon Pitch Deck Template _ Superteam.txt  README.md  airdrop-devnet.ps1  airdrop.ps1  convertPrivateKey.js  devnet-self-instructions.md  id.json  new-wallet.json  op.rs  package-lock.json  package.json  program-keypair.json  requirements.txt  self-instructions.md  test-wallet.json  tsconfig.json  webpack.config.js
.cargo/: config.toml
backend/: package-lock.json  package.json  server.js  solanaInteraction.js  test-wallet.json
frontend/: config-overrides.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  LandingPage.js  idl.json  index.css  index.js
frontend/src/components/: CertificateQRCode.js  CertificateVerification.js  CredentialVerification.js  Dashboard.css  Dashboard.js  EmployeeVerification.css  EmployeeVerification.js  EmployeeVerificationDashboard.css  EmployeeVerificationDashboard.js  EmployerLogin.js  GenerateQRCode.css  GenerateQRCode.js  HomePage.js  LandingPage.css  LandingPage.js  Navigation.js  OktoLogin.js  PaymentHandler.js  QRCodeGenerator.js  ReclaimTest.js  SignIn.css  (+7 more)
programs/certificate/: Cargo.toml  build.rs
programs/certificate/src/: lib.rs
programs/credible/: Cargo.toml  test-wallet.json
programs/credible/src/: lib.rs
smart-contracts/: certificate.ts  tsconfig.json
smart-contracts/src/: lib.rs
src/: App.css  App.js  lib.rs
src/components/: EmployeeVerification.js
tests/: certificate.ts
(+12 files in other folders)
