   [workspace]
   members = [
       "programs/credible"
   ]

   resolver = "2"

   [workspace.dependencies]
   anchor-lang = "0.28.0"
   solana-program = "1.16.0"
   # Remove or comment out these lines for now
   # reclaim = { version = "0.1.0", path = "./reclaim" }
   # reclaim-solana = { version = "0.1.0", path = "./reclaim-solana" }

   [profile.release]
   overflow-checks = true
   lto = "fat"
   codegen-units = 1

   [profile.release.build-override]
   opt-level = 3
   incremental = false
   codegen-units = 1
